# Lite3DReg

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  app.py  apt.txt  build.sh  readme.md  requirements.txt
cmake/: FindOpenMesh.cmake
cpp/: pch.h
cpp/core/: nonrigid_spare_registration.cpp  nonrigid_spare_registration.h  registration.cpp  registration.h  rigid_fricp_registration.cpp  rigid_fricp_registration.h
cpp/io/: io.h
cpp/tools/: Types.h  nanoflann.h  nodeSampler.cpp  nodeSampler.h  parameters.h  robust_norm.h  tools.cpp  tools.h
cpp/tools/geodesic/: geodesic_algorithm_exact.h
docs/: CNAME  index.html  styles.css
examples/c++/: CMakeLists.txt  main.cpp
examples/data/fricp/: fricpm3reg_pc.ply  fricpm3trans.txt
examples/python/: example_python.py
python/: pyregister.cpp
